<resources>
    <string name="app_name">SpanishOverlay</string>
    <string name="service_label">Spanish Overlay Service</string>
    <string name="accessibility_description">Reads visible text and overlays Spanish translations to help you learn vocabulary passively.</string>
    <string name="service_status_on">Service is running</string>
    <string name="service_status_off">Service is not enabled</string>
    <string name="enable_service">Open Accessibility Settings</string>
    <string name="battery_warning">Battery optimization may stop the service. Tap to disable.</string>
    <string name="section_frequency">Replacement Frequency</string>
    <string name="section_filter">Word Filters</string>
    <string name="section_appearance">Appearance</string>
    <string name="section_advanced">Advanced</string>
    <string name="section_stop_words">Stop Words</string>
    <string name="section_excluded_apps">Excluded Apps</string>
    <string name="mode_fraction">Every Nth eligible word</string>
    <string name="mode_fixed">Fixed count per screen</string>
    <string name="label_word_length">Word length: %1$d - %2$d</string>
    <string name="label_complexity">Complexity: %1$d - %2$d</string>
    <string name="label_alpha">Overlay opacity: %1$d%%</string>
    <string name="label_ttl">Display time: %1$.1fs</string>
    <string name="label_debounce">Debounce: %1$dms</string>
    <string name="label_every_n">Every %1$d words</string>
    <string name="label_fixed_count">Replace %1$d words</string>
    <string name="reset_defaults">Reset to Defaults</string>
</resources>
